moved LoopEnum into the enums sub-package
updated dependencies to the right type
removed unnecessary dependencies
file.* now only export to test